# midas-journal-857

itk_edge_detect/: CMakeLists.txt  main.cpp
itk_hf/: CMakeLists.txt  QEngineStatus.cpp  QEngineStatus.h  QImageViewer.cpp  QImageViewer.h  cpu_kernel.cpp  cpu_kernel.h  createImageStream.cpp  cropImageStream.cpp  image.cpp  image.h  main.cpp  pipeline.cpp  pipeline.h
itk_hf/hf/: CMakeLists.txt  ComputingResource.cpp  ComputingResource.h  Data.cpp  Data.h  ExecutionEngine.cpp  ExecutionEngine.h  Flow.cpp  Flow.h  Makefile  MemoryAllocator.cpp  MemoryAllocator.h  Scheduler.cpp  Scheduler.h  TaskImplementation.cpp  TaskImplementation.h  TaskOrientedModule.cpp  TaskOrientedModule.h  ThreadVPE.cpp  ThreadVPE.h  VirtualProcessingElement.cpp  VirtualProcessingElement.h  callback.h  global.cpp  global.h  hyperflow.h  objectpool.h  stltypes.h  thread.cpp  thread.h
